--- a/Daily THA/THA 4/styles.css
+++ b/Daily THA/THA 4/styles.css
@@ -1,65 +1,71 @@
-.circle{
-    width: 240px;
-    height: 240px;
+
+
+.box{
+    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: 400px;
+    margin-top: -200px;
+    margin-left: -200px;
+    border-radius: 2px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: white;
+}
+
+.one{
+    position: absolute;
+    top: 27.2%;
+    left: 30%;
+    height: 100px;
+    width: 20px;
+    background-color: white;
+    border-radius: 7%;
+}
+.one-second{
+    background-color: white;
+    position: absolute;
+    height: 50px;
+    width: 20px;
+    top: 14.5%;
+    left: 25%;
+    transform: rotate(220deg);
+    transform-origin: bottom right;
+    border-radius: 10%;
+}
+.zero-one{
+    position: absolute;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border-style: solid;
-    border-color: rgb(197, 8, 8);
     border-width: 20px;
-    position: relative;
-
+    border-color: white;
+    top: 28%;
+    left: 33%;
 }
-
-body{
-    height: 600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.minute, .hour, .second{
+.zero-two{
     position: absolute;
-    background: black;
-    border-radius: 10px;
-}
-.hour{
-    top: 22%;
-    left: 51%;
-    width: 1.5%;
-    height: 30%;
-    animation: rotate 43200s infinite linear;
-    transform-origin: 49.8% 100%;
-    
-    
-}
-.minute{
-    top: 15%;
-    left: 51%;
-    width: 1.5%;
-    height: 37%;
-    animation: rotate 3600s infinite linear;
-    transform-origin: 49.8% 100%;
-    
-}
-.second{
-    top: 14%;
-    left: 52%;
-    width: 0.1%;
-    height: 38%;
-    animation: rotate 60s infinite steps(60);
-    transform-origin: 49.8% 100%;
-    
-}
-.dot{
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    background-color: black;
-    height: 10px;
-    width: 10px;
+    border-style: solid;
+    border-width: 20px;
+    border-color: white;
+    top: 28%;
+    left: 54%;
+}
+.days{
     position: absolute;
-    left: 49.8%;
+    font-size: 80px;
     top: 50%;
+    left: 27%;
+}
+.last{
+    position: absolute;
+    font-size: 25px;
+    top: 70%;
+    left: 27%;
+}
 
-}
-@keyframes rotate {
-    100%{
-        transform: rotateZ(360deg);
-    }
-}
